--- a/ui.apps/pom.xml
+++ b/ui.apps/pom.xml
@@ -132,6 +132,10 @@
             <artifactId>uber-jar</artifactId>
             <classifier>apis</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.models.api</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.adobe.cq</groupId>
