JACKRABBIT OAK. JCR (OAK) BASICS. Bugs have been fixed. Code covered with tests.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -43,7 +43,7 @@
                         <!-- Import any version of javax.inject, to allow running on multiple versions of AEM -->
                         <Import-Package>javax.inject;version=0.0.0,*</Import-Package>
                         <Sling-Model-Packages>
-                            training-project.core
+                            trainingproject.core.models
                         </Sling-Model-Packages>
                     </instructions>
                 </configuration>
