JCR OBSERVATION AND SLING EVENTS. Two tasks performed. Code covered with tests. Logging added.

--- a/pom.xml
+++ b/pom.xml
@@ -457,6 +457,12 @@
                 <classifier>apis</classifier>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>org.apache.geronimo.specs</groupId>
+                <artifactId>geronimo-atinject_1.0_spec</artifactId>
+                <version>1.0</version>
+                <scope>provided</scope>
+            </dependency>
             <!-- OSGi Dependencies -->
             <dependency>
                 <groupId>org.osgi</groupId>
